add download button

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,24 @@ footer {
   color: #ff0000;
 }
 
+.modal button {
+  padding: 0.8em;
+  font-size: 1em;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+}
+
+.modal button {
+  background-color: #007bff;
+  color: #fff;
+  cursor: pointer;
+  border: none;
+}
+
+.modal button:hover {
+  background-color: #0056b3;
+}
+
 /* Анимация модального окна */
 .modal.show {
   animation: fadeIn 0.3s ease-out forwards;
